# duckdb

./: CMakeLists.txt  Makefile
.github/actions/build_extensions/: action.yml
.github/workflows/: Main.yml
.github/workflows.ignore/: LinuxRelease.yml
extension/: CMakeLists.txt
extension/affine-gap/: CMakeLists.txt  affine-gap-extension.cpp
src/main/extension/: extension_helper.cpp
tools/pythonpkg/: cibw.toml
